--- a/css.css
+++ b/css.css
@@ -112,7 +112,7 @@ img {
 }
 
 .search {
-    background: url('images/search.png') no-repeat;
+    background: url('/images/search.png') no-repeat;
     width: 288px;
     height: 30px;
     background-position: 5px center;
@@ -610,7 +610,7 @@ img {
 
 .cb-input:checked {
     background-color: #A1917E;
-    background-image: url('images/checked.png');
+    background-image: url('/images/checked.png');
     background-size: 14px 14px;
     background-position: center;
     background-repeat: no-repeat;
@@ -776,7 +776,7 @@ img {
 .hero {
     width: 100%;
     height: 800px;
-    background: url('images/hero.png') no-repeat center center;
+    background: url('/images/hero.png') no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: center;
@@ -802,7 +802,7 @@ img {
     .hero {
         width: 100%;
         height: 600px;
-        background: url('images/hero.medium.png') no-repeat center center ;
+        background: url('/images/hero.medium.png') no-repeat center center ;
         background-size: cover;
         display: flex;
         justify-content: center;
@@ -844,7 +844,7 @@ img {
     }
 
     .hero .image {
-        background: url('images/hero.small.png') no-repeat center center;
+        background: url('/images/hero.small.png') no-repeat center center;
         background-size: cover;
         background-position: center;
         width: 100%;
@@ -1094,7 +1094,7 @@ img {
                                                                         /*Hero Sale*/
 
 .sale {
-    background: url(images/sale.png) no-repeat center center;
+    background: url('/images/sale.png') no-repeat center center;
     background-size: cover;
     width: 100%;
     height: 664px;
@@ -1131,7 +1131,7 @@ img {
 
 @media screen and (max-width: 768px) {
     .sale {
-        background: url(images/sale.small.png) no-repeat center center;
+        background: url('/images/sale.small.png') no-repeat center center;
         background-size: cover;
         width: 100%;
         height: 800px;
@@ -1176,7 +1176,7 @@ img {
 }
 
 .summer_ct {
-    background: url(images/summer.png) no-repeat center center;
+    background: url('/images/summer.png') no-repeat center center;
     background-size: cover;
     display: flex;
     justify-content: start;
