страховка для сафарі

--- a/css.css
+++ b/css.css
@@ -2073,6 +2073,7 @@ img {
 .catalogue2_ct {
     margin: 30px 0;
     display: grid;
+    background-color: #ffffff;
     grid-template-columns: repeat(auto-fit, minmax(max(260px, 20%), 1fr));
     gap: 24px;
     justify-content: space-around;
