--- a/css.css
+++ b/css.css
@@ -637,6 +637,7 @@ img {
     .cart-content{
         width: 50%;
     }
+    
 }
 
 @media screen and (max-width:768px) {
@@ -3678,12 +3679,18 @@ button.reviewBtn {
 
 .forgot-pass-content {
     background-color: #ffffff;
-    padding: 30px 40px;
+    padding: 70px 40px;
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 30px;
-    width: 30%;
+    width: 50%;
+    position: relative;
+}
+.close-forgot-btn{
+    position: absolute;
+    left: 20px;
+    top: 20px;
 }
 .approve-acc {
     display: flex;
@@ -3824,6 +3831,9 @@ button.reviewBtn {
     .register-content {
         width: 70vw;
     }
+    .forgot-pass-content{
+        width: 60%;
+    }
 }
 @media screen and (max-width: 768px) {
     .login-content {
@@ -3862,6 +3872,11 @@ button.reviewBtn {
     .forgot-pass-content {
         width: 100%;
         height: 100dvh;
+    }
+    .approve-code{
+        position: initial;
+        margin: 10px 0;
+        width: 100%;
     }
 }
 
