--- a/css.css
+++ b/css.css
@@ -1436,30 +1436,47 @@ img {
 .filter-submenu {
     position: absolute;
     left: 0;
-    top:100%;
     width: 100%;
     height: auto;
-    background-color: white;
+    background-color: #FFFFFF;
     border: 1px solid #d9d9d9;
-    z-index: 1000;
-    visibility: hidden;
+    box-shadow: 0 6px 12px rgba(0,0,0,0.40);
+    z-index: 10;
     opacity: 0;
     pointer-events: none;
     transform: translateY(-10%);
     transition: 
         opacity 0.3s ease,
         transform 0.4s ease;
-        
-    -webkit-backface-visibility: hidden;
-    backface-visibility: hidden;
-    -webkit-transform: translateZ(0) translateY(-10%);
-    transform: translateZ(0) translateY(-10%);
-}
+}   
 
 .filter-submenu.show {
     pointer-events: auto;
     opacity:1;
-    transform: translateY(0%) translateX(0%);
+    transform: translateY(0%);
+}
+
+.sort-submenu-sp {
+    position: absolute;
+    left: 0;
+    width: 100%;
+    height: auto;
+    background-color: #FFFFFF;
+    border: 1px solid #d9d9d9;
+    box-shadow: 0 6px 12px rgba(0,0,0,0.40);
+    z-index: 10;
+    opacity: 0;
+    pointer-events: none;
+    transform: translateY(-10%);
+    transition: 
+        opacity 0.3s ease,
+        transform 0.4s ease;
+}
+
+.sort-submenu-sp.show {
+    pointer-events: auto;
+    opacity:1;
+    transform: translateY(0%);
 }
 
 .filter-submenu label {
@@ -1538,7 +1555,18 @@ img {
     color: white;
 }
 
-.sizes-submenu-sp,
+.sizes-submenu-sp {
+    display: flex;
+    max-height: 0;
+    opacity: 0;
+    visibility: hidden;
+    pointer-events: none;
+    transform: translateY(-20%);
+    transition: opacity 0.2s ease,
+                transform 0.4s ease,
+                max-height 0.2s ease;
+}
+
 .sex-submenu-sp,
 .season-submenu-sp{
     display: flex;
@@ -1633,27 +1661,6 @@ img {
     height: 30px;
 }
 
-.sort-submenu-sp {
-    position: absolute;
-    left: 0;
-    width: 100%;
-    height: auto;
-    background-color: white;
-    border: 1px solid #d9d9d9;
-    z-index: 10;
-    opacity: 0;
-    pointer-events: none;
-    transform: translateY(-10%);
-    transition: 
-        opacity 0.3s ease,
-        transform 0.4s ease;
-}
-
-.sort-submenu-sp.show {
-    pointer-events: auto;
-    opacity:1;
-    transform: translateY(0%);
-}
 
 .sort-option-sp {
     font-size: 16px;
