--- a/css.css
+++ b/css.css
@@ -22,9 +22,10 @@ button {
     cursor: pointer;
     transition: transform 0.2s ease
 }
-
-button:hover {
-    transform: scale(0.9);
+@media (hover: hover) {
+    button:hover {
+        transform: scale(0.9);
+    }
 }
 
 ul {
@@ -74,13 +75,18 @@ a {
     color: black;
 }
 
+fieldset {
+    border: none;
+}
+
 .btn {
     transition: transform 0.2s ease;
 }
-
-.btn:hover {
-    cursor: pointer;
-    transform: scale(0.9);
+@media (hover: hover) {
+    .btn:hover {
+        cursor: pointer;
+        transform: scale(0.9);
+    }
 }
 
 img {
@@ -428,10 +434,11 @@ img {
 .icons a {
     transition: transform 0.25s ease;
 }
-
-.icons a:hover {
-    cursor: pointer;
-    transform: scale(0.9);
+@media (hover: hover) {
+    .icons a:hover {
+        cursor: pointer;
+        transform: scale(0.9);
+    }
 }
 
 .icons .number {
@@ -826,10 +833,12 @@ img {
 .block .likeThis img {
     transition: transform 0.3s ease;
 }
-
-.block .likeThis:hover img{
-    transform: scale(0.85);
+@media (hover: hover) {
+    .block .likeThis:hover img{
+        transform: scale(0.85);
+    }
 }
+
 
 .block .text {
     max-height: 60px;
@@ -875,10 +884,12 @@ img {
 .block .buyBtn img {
     transition: transform 0.3s ease;
 }
-
-.block .buyBtn:hover img {
-    transform: scale(0.85);
+@media (hover: hover) {
+    .block .buyBtn:hover img {
+        transform: scale(0.85);
+    }
 }
+
 
 .block .buyBtn:active {
     background-color: none;
@@ -1896,6 +1907,7 @@ img {
     overflow: hidden;
     max-height: 0;
     opacity: 0;
+    box-shadow: 0 2px 6px rgba(0,0,0,0.4);
     transform: translateY(-8px);
     transition:
         max-height 300ms ease,
@@ -2413,6 +2425,7 @@ img {
     height: 40px;
     font-size: 16px;
     padding: 0 10px;
+    width: 100%;
 }
 
 .choice-btn {
@@ -2426,6 +2439,7 @@ img {
 
 .choice-btn:hover {
     background-color: #d9d9d9;
+    transform: none;
 }
 
 .choice-btn.active {
@@ -2478,6 +2492,11 @@ img {
     cursor: not-allowed;
 }
 
+.full-width {
+    display: flex;
+    flex-direction: column;
+}
+
 .order-info textarea {
     grid-column: span 2;
     min-height: 80px;
@@ -2500,7 +2519,7 @@ img {
 }
 
 .ordering-btn:hover {
-    background-color: #505050;
+    transform: none;
 }
 
 @media screen and (max-width:1200px) {
